Working on the server start system